src/grammar/LuaParser.ts
// Generated from grammar/leap/LuaParser.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import LuaParserListener from "./LuaParserListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class LuaParser extends Parser {
	public static readonly SEMI = 1;
	public static readonly EQ = 2;
	public static readonly NEW = 3;
	public static readonly CLASS = 4;
	public static readonly EXTENDS = 5;
	public static readonly TRY = 6;
	public static readonly CATCH = 7;
	public static readonly THROW = 8;
	public static readonly QUESTMARK = 9;
	public static readonly COMPPLUS = 10;
	public static readonly COMPMINUS = 11;
	public static readonly COMPSTAR = 12;
	public static readonly COMPSLASH = 13;
	public static readonly COMPLL = 14;
	public static readonly COMPGG = 15;
	public static readonly COMPAMP = 16;
	public static readonly COMPPIPE = 17;
	public static readonly COMPCARET = 18;
	public static readonly DEFER = 19;
	public static readonly AT = 20;
	public static readonly BREAK = 21;
	public static readonly GOTO = 22;
	public static readonly DO = 23;
	public static readonly END = 24;
	public static readonly WHILE = 25;
	public static readonly REPEAT = 26;
	public static readonly UNTIL = 27;
	public static readonly IF = 28;
	public static readonly THEN = 29;
	public static readonly ELSEIF = 30;
	public static readonly ELSE = 31;
	public static readonly FOR = 32;
	public static readonly COMMA = 33;
	public static readonly IN = 34;
	public static readonly FUNCTION = 35;
	public static readonly LOCAL = 36;
	public static readonly LT = 37;
	public static readonly GT = 38;
	public static readonly RETURN = 39;
	public static readonly CONTINUE = 40;
	public static readonly CC = 41;
	public static readonly NIL = 42;
	public static readonly FALSE = 43;
	public static readonly TRUE = 44;
	public static readonly DOT = 45;
	public static readonly SQUIG = 46;
	public static readonly MINUS = 47;
	public static readonly POUND = 48;
	public static readonly OP = 49;
	public static readonly CP = 50;
	public static readonly NOT = 51;
	public static readonly LL = 52;
	public static readonly GG = 53;
	public static readonly AMP = 54;
	public static readonly SS = 55;
	public static readonly PER = 56;
	public static readonly COL = 57;
	public static readonly LE = 58;
	public static readonly GE = 59;
	public static readonly AND = 60;
	public static readonly OR = 61;
	public static readonly PLUS = 62;
	public static readonly STAR = 63;
	public static readonly OCU = 64;
	public static readonly CCU = 65;
	public static readonly OB = 66;
	public static readonly CB = 67;
	public static readonly EE = 68;
	public static readonly DD = 69;
	public static readonly PIPE = 70;
	public static readonly CARET = 71;
	public static readonly SLASH = 72;
	public static readonly DDD = 73;
	public static readonly SQEQ = 74;
	public static readonly NOTEQ_ALT = 75;
	public static readonly NAME = 76;
	public static readonly NORMALSTRING = 77;
	public static readonly CHARSTRING = 78;
	public static readonly JENKINSHASHSTRING = 79;
	public static readonly LONGSTRING = 80;
	public static readonly INT = 81;
	public static readonly HEX = 82;
	public static readonly FLOAT = 83;
	public static readonly HEX_FLOAT = 84;
	public static readonly COMMENT = 85;
	public static readonly C_COMMENT = 86;
	public static readonly WS = 87;
	public static readonly NL = 88;
	public static readonly SHEBANG = 89;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_start_ = 0;
	public static readonly RULE_chunk = 1;
	public static readonly RULE_block = 2;
	public static readonly RULE_stat = 3;
	public static readonly RULE_attnamelist = 4;
	public static readonly RULE_attrib = 5;
	public static readonly RULE_retstat = 6;
	public static readonly RULE_label = 7;
	public static readonly RULE_funcname = 8;
	public static readonly RULE_varlist = 9;
	public static readonly RULE_namelist = 10;
	public static readonly RULE_decorator = 11;
	public static readonly RULE_decoratorbody = 12;
	public static readonly RULE_newcall = 13;
	public static readonly RULE_explist = 14;
	public static readonly RULE_exp = 15;
	public static readonly RULE_tablecomprehension = 16;
	public static readonly RULE_anonfunc = 17;
	public static readonly RULE_indexed_member = 18;
	public static readonly RULE_var = 19;
	public static readonly RULE_prefixexp = 20;
	public static readonly RULE_functioncall = 21;
	public static readonly RULE_compound = 22;
	public static readonly RULE_args = 23;
	public static readonly RULE_functiondef = 24;
	public static readonly RULE_funcbody = 25;
	public static readonly RULE_class = 26;
	public static readonly RULE_partype = 27;
	public static readonly RULE_defaultvalue = 28;
	public static readonly RULE_extendedpar = 29;
	public static readonly RULE_extendedparlist = 30;
	public static readonly RULE_parlist = 31;
	public static readonly RULE_tableconstructor = 32;
	public static readonly RULE_fieldlist = 33;
	public static readonly RULE_field = 34;
	public static readonly RULE_fieldsep = 35;
	public static readonly RULE_identifier = 36;
	public static readonly RULE_number = 37;
	public static readonly RULE_string = 38;
	public static readonly literalNames: (string | null)[] = [ null, "';'", 
                                                            "'='", "'new'", 
                                                            "'class'", "'extends'", 
                                                            "'try'", "'catch'", 
                                                            "'throw'", "'?'", 
                                                            "'+='", "'-='", 
                                                            "'*='", "'/='", 
                                                            "'<<='", "'>>='", 
                                                            "'&='", "'|='", 
                                                            "'^='", "'defer'", 
                                                            "'@'", "'break'", 
                                                            "'goto'", "'do'", 
                                                            "'end'", "'while'", 
                                                            "'repeat'", 
                                                            "'until'", "'if'", 
                                                            "'then'", "'elseif'", 
                                                            "'else'", "'for'", 
                                                            "','", "'in'", 
                                                            "'function'", 
                                                            "'local'", "'<'", 
                                                            "'>'", "'return'", 
                                                            "'continue'", 
                                                            "'::'", "'nil'", 
                                                            "'false'", "'true'", 
                                                            "'.'", "'~'", 
                                                            "'-'", "'#'", 
                                                            "'('", "')'", 
                                                            "'not'", "'<<'", 
                                                            "'>>'", "'&'", 
                                                            "'//'", "'%'", 
                                                            "':'", "'<='", 
                                                            "'>='", "'and'", 
                                                            "'or'", "'+'", 
                                                            "'*'", "'{'", 
                                                            "'}'", "'['", 
                                                            "']'", "'=='", 
                                                            "'..'", "'|'", 
                                                            "'^'", "'/'", 
                                                            "'...'", "'~='", 
                                                            "'!='" ];
	public static readonly symbolicNames: (string | null)[] = [ null, "SEMI", 
                                                             "EQ", "NEW", 
                                                             "CLASS", "EXTENDS", 
                                                             "TRY", "CATCH", 
                                                             "THROW", "QUESTMARK", 
                                                             "COMPPLUS", 
                                                             "COMPMINUS", 
                                                             "COMPSTAR", 
                                                             "COMPSLASH", 
                                                             "COMPLL", "COMPGG", 
                                                             "COMPAMP", 
                                                             "COMPPIPE", 
                                                             "COMPCARET", 
                                                             "DEFER", "AT", 
                                                             "BREAK", "GOTO", 
                                                             "DO", "END", 
                                                             "WHILE", "REPEAT", 
                                                             "UNTIL", "IF", 
                                                             "THEN", "ELSEIF", 
                                                             "ELSE", "FOR", 
                                                             "COMMA", "IN", 
                                                             "FUNCTION", 
                                                             "LOCAL", "LT", 
                                                             "GT", "RETURN", 
                                                             "CONTINUE", 
                                                             "CC", "NIL", 
                                                             "FALSE", "TRUE", 
                                                             "DOT", "SQUIG", 
                                                             "MINUS", "POUND", 
                                                             "OP", "CP", 
                                                             "NOT", "LL", 
                                                             "GG", "AMP", 
                                                             "SS", "PER", 
                                                             "COL", "LE", 
                                                             "GE", "AND", 
                                                             "OR", "PLUS", 
                                                             "STAR", "OCU", 
                                                             "CCU", "OB", 
                                                             "CB", "EE", 
                                                             "DD", "PIPE", 
                                                             "CARET", "SLASH", 
                                                             "DDD", "SQEQ", 
                                                             "NOTEQ_ALT", 
                                                             "NAME", "NORMALSTRING", 
                                                             "CHARSTRING", 
                                                             "JENKINSHASHSTRING", 
                                                             "LONGSTRING", 
                                                             "INT", "HEX", 
                                                             "FLOAT", "HEX_FLOAT", 
                                                             "COMMENT", 
                                                             "C_COMMENT", 
                                                             "WS", "NL", 
                                                             "SHEBANG" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"start_", "chunk", "block", "stat", "attnamelist", "attrib", "retstat", 
		"label", "funcname", "varlist", "namelist", "decorator", "decoratorbody", 
		"newcall", "explist", "exp", "tablecomprehension", "anonfunc", "indexed_member", 
		"var", "prefixexp", "functioncall", "compound", "args", "functiondef", 
		"funcbody", "class", "partype", "defaultvalue", "extendedpar", "extendedparlist", 
		"parlist", "tableconstructor", "fieldlist", "field", "fieldsep", "identifier", 
		"number", "string",
	];
	public get grammarFileName(): string { return "LuaParser.g4"; }
	public get literalNames(): (string | null)[] { return LuaParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return LuaParser.symbolicNames; }
	public get ruleNames(): string[] { return LuaParser.ruleNames; }
	public get serializedATN(): number[] { return LuaParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, LuaParser._ATN, LuaParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public start_(): Start_Context {
		let localctx: Start_Context = new Start_Context(this, this._ctx, this.state);
		this.enterRule(localctx, 0, LuaParser.RULE_start_);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 78;
			this.chunk();
			this.state = 79;
			this.match(LuaParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public chunk(): ChunkContext {
		let localctx: ChunkContext = new ChunkContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, LuaParser.RULE_chunk);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 81;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let localctx: BlockContext = new BlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, LuaParser.RULE_block);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 86;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 83;
					this.stat();
					}
					}
				}
				this.state = 88;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
			}
			this.state = 90;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 21)) & ~0x1F) === 0 && ((1 << (_la - 21)) & 786433) !== 0)) {
				{
				this.state = 89;
				this.retstat();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public stat(): StatContext {
		let localctx: StatContext = new StatContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, LuaParser.RULE_stat);
		let _la: number;
		try {
			this.state = 207;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 92;
				this.match(LuaParser.SEMI);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 93;
				this.varlist();
				this.state = 94;
				this.match(LuaParser.EQ);
				this.state = 95;
				this.explist();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 97;
				this.compound();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 98;
				this.functioncall(0);
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 99;
				this.label();
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 100;
				this.match(LuaParser.BREAK);
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 101;
				this.match(LuaParser.GOTO);
				this.state = 102;
				this.identifier();
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 8);
				{
				this.state = 103;
				this.match(LuaParser.WHILE);
				this.state = 104;
				this.exp(0);
				this.state = 105;
				this.match(LuaParser.DO);
				this.state = 106;
				this.block();
				this.state = 107;
				this.match(LuaParser.END);
				}
				break;
			case 9:
				this.enterOuterAlt(localctx, 9);
				{
				this.state = 109;
				this.match(LuaParser.REPEAT);
				this.state = 110;
				this.block();
				this.state = 111;
				this.match(LuaParser.UNTIL);
				this.state = 112;
				this.exp(0);
				}
				break;
			case 10:
				this.enterOuterAlt(localctx, 10);
				{
				this.state = 114;
				this.match(LuaParser.IF);
				this.state = 115;
				this.exp(0);
				this.state = 116;
				this.match(LuaParser.THEN);
				this.state = 117;
				this.block();
				this.state = 125;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===30) {
					{
					{
					this.state = 118;
					this.match(LuaParser.ELSEIF);
					this.state = 119;
					this.exp(0);
					this.state = 120;
					this.match(LuaParser.THEN);
					this.state = 121;
					this.block();
					}
					}
					this.state = 127;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 130;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===31) {
					{
					this.state = 128;
					this.match(LuaParser.ELSE);
					this.state = 129;
					this.block();
					}
				}

				this.state = 132;
				this.match(LuaParser.END);
				}
				break;
			case 11:
				this.enterOuterAlt(localctx, 11);
				{
				this.state = 134;
				this.match(LuaParser.FOR);
				this.state = 135;
				this.identifier();
				this.state = 136;
				this.match(LuaParser.EQ);
				this.state = 137;
				this.exp(0);
				this.state = 138;
				this.match(LuaParser.COMMA);
				this.state = 139;
				this.exp(0);
				this.state = 142;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===33) {
					{
					this.state = 140;
					this.match(LuaParser.COMMA);
					this.state = 141;
					this.exp(0);
					}
				}

				this.state = 144;
				this.match(LuaParser.DO);
				this.state = 145;
				this.block();
				this.state = 146;
				this.match(LuaParser.END);
				}
				break;
			case 12:
				this.enterOuterAlt(localctx, 12);
				{
				this.state = 148;
				this.match(LuaParser.FOR);
				this.state = 149;
				this.namelist();
				this.state = 150;
				this.match(LuaParser.IN);
				this.state = 151;
				this.explist();
				this.state = 152;
				this.match(LuaParser.DO);
				this.state = 153;
				this.block();
				this.state = 154;
				this.match(LuaParser.END);
				}
				break;
			case 13:
				this.enterOuterAlt(localctx, 13);
				{
				this.state = 156;
				this.match(LuaParser.DO);
				this.state = 157;
				this.block();
				this.state = 158;
				this.match(LuaParser.END);
				}
				break;
			case 14:
				this.enterOuterAlt(localctx, 14);
				{
				this.state = 163;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===20) {
					{
					{
					this.state = 160;
					this.decorator();
					}
					}
					this.state = 165;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 166;
				this.match(LuaParser.FUNCTION);
				this.state = 167;
				this.funcname();
				this.state = 168;
				this.funcbody();
				}
				break;
			case 15:
				this.enterOuterAlt(localctx, 15);
				{
				this.state = 173;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===20) {
					{
					{
					this.state = 170;
					this.decorator();
					}
					}
					this.state = 175;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 176;
				this.match(LuaParser.LOCAL);
				this.state = 177;
				this.match(LuaParser.FUNCTION);
				this.state = 178;
				this.identifier();
				this.state = 179;
				this.funcbody();
				}
				break;
			case 16:
				this.enterOuterAlt(localctx, 16);
				{
				this.state = 181;
				this.match(LuaParser.LOCAL);
				this.state = 182;
				this.attnamelist();
				this.state = 185;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===2) {
					{
					this.state = 183;
					this.match(LuaParser.EQ);
					this.state = 184;
					this.explist();
					}
				}

				}
				break;
			case 17:
				this.enterOuterAlt(localctx, 17);
				{
				this.state = 187;
				this.match(LuaParser.LOCAL);
				this.state = 188;
				this.attnamelist();
				this.state = 189;
				this.match(LuaParser.IN);
				this.state = 190;
				this.prefixexp();
				}
				break;
			case 18:
				this.enterOuterAlt(localctx, 18);
				{
				this.state = 192;
				this.match(LuaParser.DEFER);
				this.state = 193;
				this.block();
				this.state = 194;
				this.match(LuaParser.END);
				}
				break;
			case 19:
				this.enterOuterAlt(localctx, 19);
				{
				this.state = 196;
				this.match(LuaParser.TRY);
				this.state = 197;
				this.block();
				this.state = 198;
				this.match(LuaParser.CATCH);
				this.state = 199;
				this.identifier();
				this.state = 200;
				this.match(LuaParser.THEN);
				this.state = 201;
				this.block();
				this.state = 202;
				this.match(LuaParser.END);
				}
				break;
			case 20:
				this.enterOuterAlt(localctx, 20);
				{
				this.state = 204;
				this.match(LuaParser.THROW);
				this.state = 205;
				this.exp(0);
				}
				break;
			case 21:
				this.enterOuterAlt(localctx, 21);
				{
				this.state = 206;
				this.class_();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public attnamelist(): AttnamelistContext {
		let localctx: AttnamelistContext = new AttnamelistContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, LuaParser.RULE_attnamelist);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 209;
			this.identifier();
			this.state = 210;
			this.attrib();
			this.state = 217;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===33) {
				{
				{
				this.state = 211;
				this.match(LuaParser.COMMA);
				this.state = 212;
				this.identifier();
				this.state = 213;
				this.attrib();
				}
				}
				this.state = 219;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public attrib(): AttribContext {
		let localctx: AttribContext = new AttribContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, LuaParser.RULE_attrib);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 224;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===37) {
				{
				this.state = 220;
				this.match(LuaParser.LT);
				this.state = 221;
				this.identifier();
				this.state = 222;
				this.match(LuaParser.GT);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public retstat(): RetstatContext {
		let localctx: RetstatContext = new RetstatContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, LuaParser.RULE_retstat);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 232;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 39:
				{
				this.state = 226;
				this.match(LuaParser.RETURN);
				this.state = 228;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===3 || ((((_la - 35)) & ~0x1F) === 0 && ((1 << (_la - 35)) & 536968065) !== 0) || ((((_la - 73)) & ~0x1F) === 0 && ((1 << (_la - 73)) & 4089) !== 0)) {
					{
					this.state = 227;
					this.explist();
					}
				}

				}
				break;
			case 21:
				{
				this.state = 230;
				this.match(LuaParser.BREAK);
				}
				break;
			case 40:
				{
				this.state = 231;
				this.match(LuaParser.CONTINUE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 235;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===1) {
				{
				this.state = 234;
				this.match(LuaParser.SEMI);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public label(): LabelContext {
		let localctx: LabelContext = new LabelContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, LuaParser.RULE_label);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 237;
			this.match(LuaParser.CC);
			this.state = 238;
			this.identifier();
			this.state = 239;
			this.match(LuaParser.CC);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public funcname(): FuncnameContext {
		let localctx: FuncnameContext = new FuncnameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, LuaParser.RULE_funcname);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 241;
			this.identifier();
			this.state = 246;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===45) {
				{
				{
				this.state = 242;
				this.match(LuaParser.DOT);
				this.state = 243;
				this.identifier();
				}
				}
				this.state = 248;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 251;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===57) {
				{
				this.state = 249;
				this.match(LuaParser.COL);
				this.state = 250;
				this.identifier();
				}
			}
